tsn.ca (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 15281,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.48,
  "homepage_snapshot_redirected_domain": "tsn.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001025620id_/http://tsn.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001025620id_/http%3A//tsn.ca",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tsn.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206091504id_/http%3A//tsn.ca/help/privacy.asp",
  "policy_title": "TSN.ca - Help - Canada's Sports Leader",
  "policy_url": "tsn.ca/help/privacy.asp",
  "sha1": "1e270b9f257923d91f22d7710b6136503a0d2218",
  "simhash": 17029194155153914260,
  "simhash_updated": false,
  "site_hostname": "tsn.ca",
  "site_url": "http://tsn.ca",
  "smog": 15.82,
  "strict_updated": false,
  "timestamp": "20041206091504",
  "word_count": 2495,
  "year": 2004
}

--- a/t/ts/tsn/tsn.ca.html
+++ b/t/ts/tsn/tsn.ca.html
@@ -1,10 +1,7 @@
-<!--The following is the downloaded HTML source of the tsn.ca privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605194229id_/http%3A//tsn.ca/help/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tsn.ca privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206091504id_/http%3A//tsn.ca/help/privacy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>
-
-TSN.ca - Help 
-- Canada's Sports Leader</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>TSN.ca - Help  - Canada's Sports Leader</title>
 
 <meta http-equiv="Window-target" content="_top">
 <meta name="Description" content="The most comprehensive site on the internet for Sports from a Canadian perspective.">
@@ -52,7 +49,7 @@ document.write ("</style>");
 //-->
 </script><style>.stitle{color: #FFFFFF; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10px; font-weight: bold; background-color: #BA2214;}.nav_sport_on{color: #FFFFFF; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10px; font-weight: bold; background-color: #BA2214;}</style>
 
-<div id="branding">
+<div id="tsnbranding">
 <div id="ad"><script language="JavaScript1.2" type="text/javascript" ads="1">
     var szone="help"; //  var for zone
     var smode=""; //  var for subsect stats etc
@@ -188,7 +185,8 @@ function clearDefault(el) {
 	</option><option value="/nhl/playoffs/">Playoffs
 	</option><option value="/nhl/scores.asp">Scores
 	</option><option value="/nhl/standings.asp">Standings
-	</option><option value="/nhl/schedule_results.asp">Sched./Results
+	</option><option value="/nhl/feature.asp?fid=424">Sched./Results
+	<!---<option value="/nhl/schedule_results.asp">Sched./Results--->
 	</option><option value="/nhl/player_list.asp">Players
 	</option><option value="/nhl/statistics.asp">Statistics
 	</option><option value="/nhl/injuries.asp">Injuries
@@ -206,7 +204,6 @@ function clearDefault(el) {
 	<td class="nav-sport"><select name="select" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
 	<option value="nohref" selected="">NBA
 	</option><option value="/nba/">NBA Home
-	</option><option value="/nba/playoffs/">Playoffs
 	</option><option value="/nba/scores.asp">Scores
 	</option><option value="/nba/standings.asp">Standings
 	</option><option value="/nba/schedule_results.asp">Sched./Results
@@ -216,6 +213,7 @@ function clearDefault(el) {
  	</option><option value="/nba/transactions.asp">Transactions
 	</option><option value="/nba/your_call.asp">Your Call
 	</option><option value="/nba/feature.asp?fid=2824">NBA on TSN
+	</option><option value="/nba/playoffs/">Playoffs
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</option></select></td>
 	</tr>
@@ -223,6 +221,7 @@ function clearDefault(el) {
 	<tr> 
 	<td class="nav-sport"><select name="select" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
 	<option value="nohref" selected="">MLB
+	</option><option value="/mlb/playoffs/">Playoffs
 	</option><option value="/mlb/">Home
 	</option><option value="/mlb/scores.asp">Scores
 	</option><option value="/mlb/standings.asp">Standings
@@ -256,11 +255,10 @@ function clearDefault(el) {
 	<td class="nav-sport"><select name="select" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
 	<option value="nohref" selected="">NFL
 	</option><option value="/nfl/">Home
-	</option><option value="/nfl/playoffs/">Playoffs
 	</option><option value="/nfl/scores.asp">Scores
 	</option><option value="/nfl/standings.asp">Standings
-	</option><option value="/nfl/stats.asp?slug=BC-FBP-SCHD-NFLWEEK-R">Sched./Results
-	<!---<option value="/nfl/schedule_results.asp">Sched./Results--->
+	<!---<option value="/nfl/stats.asp?slug=BC-FBP-SCHD-NFLWEEK-R">Sched./Results--->
+	</option><option value="/nfl/schedule_results.asp">Sched./Results
 	</option><option value="/nfl/player_list.asp">Players
 	</option><option value="/nfl/statistics.asp">Statistics
 	</option><option value="/nfl/injuries.asp">Injuries
@@ -298,8 +296,8 @@ function clearDefault(el) {
 	<td class="nav-sport"><select name="select7" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
 	<option value="nohref" selected="">Auto Racing
   </option><option value="/auto_racing/">Home
-  </option><option value="/auto_racing/formula_one/main.asp">Formula One
   </option><option value="/auto_racing/nascar/main.asp">Nascar
+  </option><option value="/auto_racing/formula_one/main.asp">Formula One
   </option><option value="/auto_racing/cart/main.asp">Champ Car
   </option><option value="/auto_racing/irl/main.asp">IRL
   </option><option value="/auto_racing/your_call.asp">Your Call
@@ -327,7 +325,7 @@ function clearDefault(el) {
 	<option value="nohref" selected="">Soccer
 	</option><option value="/soccer/">Home
 	</option><option value="/soccer/feature.asp?fid=786">Canada
-	</option><option value="/soccer/euro/">Euro 2004
+	</option><option value="/soccer/feature.asp?fid=9950">World Cup 2006
 	</option><option value="/soccer/feature.asp?fid=11">FIFA Rankings
 	</option><option value="/soccer/your_call.asp">Your Call
 	</option><option value="/soccer/feature.asp?fid=1084">Soccer on TSN
@@ -338,16 +336,18 @@ function clearDefault(el) {
 
 
     
+	
 	<tr>
 	<td class="nav-sport"><select name="select8" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
 	<option value="nohref" selected="">More Hockey
 	</option><option value="/canadian_hockey/">Cdn. Hockey
 	</option><option value="/chl/">CHL
 	</option><option value="/ahl/">AHL
-	</option><option value="/echl/stats.asp?slug=BC-HKE-RCPS-ECHLRECAP-R">ECHL
+	</option><option value="/echl/stats.asp?slug=BC-HKE-STND-ECHLSTAND-R">ECHL
 	</option><option value="/world_jrs/">World Jrs.
 	</option><option value="/canadian_hockey/feature.asp?fid=6389">World Champ.
 	</option><option value="/world_cup_hockey/">World Cup
+	</option><option value="/wha/">WHA
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</option></select></td>
 	</tr>
@@ -366,7 +366,7 @@ function clearDefault(el) {
 	</option><option value="/pan_am_games/">Pan Am Games	
 	</option><option value="/skiing/">Skiing
 	</option><option value="/soccer/">Soccer
-	</option><option value="/wrestling/">WWE
+	</option><option value="/wrestling/">Wrestling
 	</option><option value="/winter_sports/">Winter Sports	
 	</option><option value="/xgames/">X Games
 	</option><option value="/other_sports/">Other Sports
@@ -375,12 +375,22 @@ function clearDefault(el) {
 	</option><option value="/ncaa/">NCAA
 	</option><option value="/wnba/">WNBA
 	</option><option value="nohref">-----
-	</option><option value="http://www.universitysport.ca" target="new">University Sport
+	</option><option value="/cis/">University Sport
 	</option><option value="nohref">-----
 	</option><option value="/olympics/">Olympics
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</option></select></td>
 	</tr>
+	
+	<tr>
+	<td class="nav-sport"><select name="select8" onchange="MM_jumpMenu('parent',this,0)" class="nav-sportdropdown">
+	<option value="nohref" selected="">University Sport
+	</option><option value="/cis/">Home
+	</option><option value="http://www.universitysport.ca" target="new">Official Site
+	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	</option></select></td>
+	</tr>
+	
 
 <!--include virtual="/inc/nav/hubs/morehockey.inc"-->
 
@@ -423,6 +433,7 @@ function clearDefault(el) {
 	</option><option value="/shows/citc/">Cable in Class
 	</option><option value="/broadcast/feature.asp?fid=7805">TSN HD
 	</option><option value="/shows/year_in_review/">Year In Review
+	</option><option value="/shows/special_olympics_day/">Special Olympics
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</option></select></td>
 	</tr>
@@ -438,6 +449,7 @@ function clearDefault(el) {
 	</option><option value="http://www.finsandskins.com/">Fins and Skins
 	</option><option value="http://www.motoringtv.com/">Motoring 2004
 	</option><option value="http://www.motorcycleexperience.ca/">M'cycle Exp.
+	</option><option value="http://www.scootergirlstv.com/">Scooter Girls
 	</option><option value="http://www.snowtraxtv.com/">Snow Trax
 	</option><option value="http://www.carsrally.ca/">Subaru Rally
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -479,7 +491,7 @@ function clearDefault(el) {
 	</option><option value="http://works.workopolis.com/customers/bgm/gi/" target="new">Careers
 	</option><option value="/personalities/bios.asp?fid=2386">Personalities
 	</option><option value="/broadcast/extra_topics.asp">TSN Extra
-	</option><option value="/broadcast/feature.asp?fid=7805">TSN HD
+	</option><option value="/broadcast/tv_schedule.asp?sport=HD">TSN HD
 	</option><option value="nohref">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</option></select></td>
 	</tr>
@@ -488,7 +500,6 @@ function clearDefault(el) {
 	<option value="nohref" selected="">Website
 	</option><option value="/website/">Home
 	</option><option value="/newsletters/">Newsletters
-	</option><option value="/wireless/">Wireless
 	</option><option value="http://works.workopolis.com/customers/bgm/gi/" target="new">Careers
 	</option><option value="/contests/">Contests
 	</option><option value="/website/contact_us.asp">Contact Us
@@ -609,13 +620,13 @@ Privacy procedures specific to a BGM Service can be found on a BGM Site at the l
 </p><p>
 BGM provides you with the means to access, update, edit or delete any Account or Registration Information you may have provided to us at any time on your own by going to the appropriate page in the Account or Registration section of the relevant BGM Service, and changing or deleting such information  as desired. 
 </p><p>
-If you are unsure whether we have a record containing any of your Personal Information and would like to confirm whether or not we do, please send an e-mail to our Privacy Manager at <a href="mailto:generalinfo@bgmi.ca">generalinfo@bgmi.ca</a>, indicating all e-mail addresses that you may have given us. 
+If you are unsure whether we have a record containing any of your Personal Information and would like to confirm whether or not we do, please send an e-mail to our Privacy Manager <a href="/website/email_form.asp?mailto=tech">here</a>, indicating all e-mail addresses that you may have given us. 
 </p><p>
 If you decide at any time that you do not want to receive any e-mail materials to which you have subscribed, you may choose to unsubscribe to these e-mails by following the instructions at the end of the message. 
 </p><p>
 <strong>QUESTIONS, COMMENTS OR SUGGESTIONS? </strong>
 </p><p>
-If you have questions, comments or suggestions about this Privacy Policy or BGM's privacy practices that were not answered here, send our Privacy Manager an e-mail at <a href="mailto:generalinfo@bgmi.ca">generalinfo@bgmi.ca</a>. 
+If you have questions, comments or suggestions about this Privacy Policy or BGM's privacy practices that were not answered here, send our Privacy Manager an e-mail  <a href="/website/email_form.asp?mailto=tech">here</a>. 
 </p><p>
 </p><p>
 <strong>BGM USE OF NON-PERSONAL INFORMATION</strong>
@@ -656,7 +667,7 @@ Cookies are used on many major web sites. Most browsers are initially set up to 
 Certain BGM Services may contain electronic images known as Web beacons - sometimes called single-pixel gifs - that allow BGM to count users who have visited those pages and to deliver co-branded services. Web beacons are not used to access your Personal Information; they are a technique used to compile aggregated statistics about BGM Service usage. Web beacons collect only a limited set of information including a cookie number, time and date of a page view, and a description of the page on which the Web beacon resides.  Certain BGM Service web pages may also contain Web beacons placed there by our advertising partners to help BGM determine the effectiveness of our Internet advertising campaigns.  
 </p>
 <p><i>
-Copyright 2003 Bell Globemedia Inc. <br>
+Copyright 2004 Bell Globemedia Inc. <br>
 All Rights Reserved.  
 </i></p>
 
@@ -687,15 +698,13 @@ All Rights Reserved.
 	<td align="center" bgcolor="#EAE9E4" width="765">
 		<table cellspacing="0" cellpadding="0" border="0">
 		<tbody><tr>
-		<td height="18">&nbsp;<a href="/website/contact_us.asp" class="footerLinkDk">Contact Us</a>&nbsp;</td>
+		<td height="18">&nbsp;<a href="/website/contact_us.asp" class="footerLinkDk">Help &amp; Contact Us</a>&nbsp;</td>
 		<td class="footerTextDk">&nbsp;|&nbsp;</td>
 		<td>&nbsp;<a href="/help/privacy.asp" class="footerLinkDk">Privacy</a>&nbsp;</td>
 		<td class="footerTextDk">&nbsp;|&nbsp;</td>
 		<td>&nbsp;<a href="/help/terms_and_conditions.asp" class="footerLinkDk">Terms &amp; Conditions</a>&nbsp;</td>
 		<td class="footerTextDk">&nbsp;|&nbsp;</td>
 		<td>&nbsp;<a href="/mediakit/" class="footerLinkDk">Advertise</a>&nbsp;</td>
-		<td class="footerTextDk">&nbsp;|&nbsp;</td>
-		<td>&nbsp;<a href="/help/main.asp" class="footerLinkDk">Help</a>&nbsp;</td>
 		</tr>
 		</tbody></table>
 	</td>
@@ -756,37 +765,74 @@ All Rights Reserved.
 </tr>
 </tbody></table>
 
-<!---please do not remove - bb - 04.06.04--->
+<!---please do not remove - bbates - 11.25.04--->
+
+<script language="JavaScript">
+GMHotButton_transAdUnit=true;
+</script>
+
 <script language="JavaScript1.2">
-if (!ONTOutdoorDhtml) {if (parent.ONTOutdoorDhtml) {var ONTOutdoorDhtml = parent.ONTOutdoorDhtml;} else {var ONTOutdoorDhtml=false;}}
-if (ONTOutdoorDhtml) {
-	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1321\"><\/scr'+'ipt>');
+if (!EdgeShavingGelDHTML) {if (parent.EdgeShavingGelDHTML) {var EdgeShavingGelDHTML = parent.EdgeShavingGelDHTML;} else {var EdgeShavingGelDHTML=false;}}
+if (EdgeShavingGelDHTML) {
+	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?2009\"><\/scr'+'ipt>');
+	}
+</script>
+
+<script language="JavaScript">
+SonyDVDPlayback_transAdUnit=true;
+</script>
+
+<script language="JavaScript">
+FSNCFLPlayoffs_transAdUnit=true;
+</script>
+
+<script language="JavaScript1.2">
+AcuraRSX_VideoCommercial=true;	
+</script>
+
+<script language="JavaScript">
+SonyDVDRDRVX500_format_transAdUnit=true;
+</script>
+
+<script language="JavaScript">
+SonyDVDRDRVX500_dvdvhs_transAdUnit=true;
+</script>
+
+<script language="JavaScript">
+SonyDVDRDRHX900_record_transAdUnit=true;
+</script>
+
+<script language="JavaScript">
+SonyLCDPLasma_transAdUnit=true;
+</script>
+
+<script language="JavaScript">
+SonyGrandWega_transAdUnit=true;
+</script>
+
+<script language="JavaScript1.2">
+if (!ONTFandADHTML) {if (parent.ONTFandADHTML) {var ONTFandADHTML = parent.ONTFandADHTML;} else {var ONTFandADHTML=false;}}
+if (ONTFandADHTML) {
+	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1825\"><\/scr'+'ipt>');
 	}
 </script>
 
 <script language="JavaScript1.2">
-if (!ONTOutdoor2Dhtml) {if (parent.ONTOutdoor2Dhtml) {var ONTOutdoor2Dhtml = parent.ONTOutdoor2Dhtml;} else {var ONTOutdoor2Dhtml=false;}}
-if (ONTOutdoor2Dhtml) {
-	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1320\"><\/scr'+'ipt>');
+if (!BMWXdriveDHTML) {if (parent.BMWXdriveDHTML) {var BMWXdriveDHTML = parent.BMWXdriveDHTML;} else {var BMWXdriveDHTML=false;}}
+if (BMWXdriveDHTML) {
+	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1803\"><\/scr'+'ipt>');
 	}
 </script>
 
 <script language="JavaScript1.2">
-if (!ONT2Dhtml) {if (parent.ONT2Dhtml) {var ONT2Dhtml = parent.ONT2Dhtml;} else {var ONT2Dhtml=false;}}
-if (ONT2Dhtml) {
-	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1314\"><\/scr'+'ipt>');
+if (!OntarioLottoDHTML) {if (parent.OntarioLottoDHTML) {var OntarioLottoDHTML = parent.OntarioLottoDHTML;} else {var OntarioLottoDHTML=false;}}
+if (OntarioLottoDHTML) {
+	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1728\"><\/scr'+'ipt>');
 	}
 </script>
 
-<script language="JavaScript1.2">
-if (!ONTDhtml) {if (parent.ONTDhtml) {var ONTDhtml = parent.ONTDhtml;} else {var ONTDhtml=false;}}
-if (ONTDhtml) {
-	document.write('<scr'+'ipt language=\"javascript\" src=\"http://voken.eyereturn.com/?1099\"><\/scr'+'ipt>');
-	}
-</script>
-
-<script language="JavaScript1.2">
-FranklinTempleton_transAdUnit=true;	
+<script language="JavaScript">
+Pronostik=true;
 </script>
 
 
