--- a/s/sc/scr/scrubtheweb.com.html
+++ b/s/sc/scr/scrubtheweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the scrubtheweb.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603092738id_/http%3A//scrubtheweb.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scrubtheweb.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206092552id_/http%3A//www.scrubtheweb.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Scrub The Web Privacy Policy</title>
@@ -45,7 +45,7 @@
  </tr>
  <tr>
   <td valign="TOP" width="164" height="60" bgcolor="#FFFFFF" align="CENTER"><table width="120" align="CENTER" cellpadding="1" cellspacing="1" border="1" bgcolor="#FF0000"><tbody><tr><td height="60" bgcolor="#FFFFFF" valign="top" align="CENTER"><a href="http://www.scrubtheweb.com/cgi-bin/120x60gobillboard.cgi?ad=abs_submit" target="_blank" style="font-family: Helvetica, Arial, sans-serif;  font-size: 10px; font-weight: bold; color: #0000FF;">Priority search engine placement. Includes Yahoo, AltaVista Hotbot and more!</a></td></tr></tbody></table></td>
-  <td valign="TOP" width="482" bgcolor="#FFFFFF" align="CENTER"><a href="http://www.scrubtheweb.com/cgi-bin/gobillboard.cgi?ad=junkyard" target="_blank"><img src="/banners/jyd.gif" width="468" height="60" border="0" alt=""></a></td>
+  <td valign="TOP" width="482" bgcolor="#FFFFFF" align="CENTER"><a href="http://www.scrubtheweb.com/cgi-bin/gobillboard.cgi?ad=vendercom" target="_blank"><img src="/banners/vender5.gif" width="468" height="60" border="0" alt=""></a></td>
  </tr>
  <tr>
   <td colspan="2" bgcolor="#FFFFFF">&nbsp;</td>
