--- a/f/fr/fre/freeonlinesurveys.com.html
+++ b/f/fr/fre/freeonlinesurveys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeonlinesurveys.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401211106id_/http%3A//freeonlinesurveys.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeonlinesurveys.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206114434id_/http%3A//freeonlinesurveys.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Free Online Surveys</title>
@@ -49,11 +49,8 @@ a {  color: #FF0000; text-decoration: underline}
 
   </tr>
   <tr valign="top"> 
-    <td>&nbsp;&nbsp;&nbsp;<a href="login_form.asp"><img name="loginbutton" border="0" src="navbar2/nav2_members_login.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="tour_1.asp"><img name="tour" border="0" src="navbar2/nav2_take_a_tour.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onclick="window.open('http://65.19.137.113/rendersurvey.asp?id=2', '','toolbar=0,location=0,directories=0,status=0,menubar=0,scrollbars=1,resizable=1')"><img name="tryoursurvey" border="0" src="navbar2/nav2_try_our_survey.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/faq" target="_blank"><img name="Image7" border="0" src="navbar2/nav2_faq.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="contact-us.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('contactus','','navbar2/nav2_contact_us_f2.gif',1)"></a><a href="contact-us.asp"><img src="navbar2/nav2_contact_us.gif" width="104" height="20" border="0"></a>&nbsp; 
-      &nbsp;&nbsp;<a href="javascript:window.external.AddFavorite('http://freeonlinesurveys.com/welcome.asp','Free Online Surveys')"><img name="bookmarkus" border="0" src="navbar2/nav2_bookmark_us.gif" width="104" height="20"></a> 
-      &nbsp;&nbsp;<a href="http://www.isogem.com"><img src="navbar2/shim.gif" width="16" height="20" border="0"></a> 
-      <a href="http://www.pesquisasonline.com"><img src="navbar2/shim.gif" width="16" height="20" border="0"></a> 
-    </td>
+    <td>&nbsp;&nbsp;&nbsp;<a href="login_form.asp"><img name="loginbutton" border="0" src="navbar2/nav2_members_login.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="tour_1.asp"><img name="tour" border="0" src="navbar2/nav2_take_a_tour.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" onclick="window.open('http://freeonlinesurveys.com/rendersurvey.asp?id=2', '','toolbar=0,location=0,directories=0,status=0,menubar=0,scrollbars=1,resizable=1')"><img name="tryoursurvey" border="0" src="navbar2/nav2_try_our_survey.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/faq" target="_blank"><img name="Image7" border="0" src="navbar2/nav2_faq.gif" width="104" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="contact-us.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('contactus','','navbar2/nav2_contact_us_f2.gif',1)"></a><a href="contact-us.asp"><img src="navbar2/nav2_contact_us.gif" width="104" height="20" border="0"></a>&nbsp; 
+      &nbsp;&nbsp;<a href="javascript:window.external.AddFavorite('http://freeonlinesurveys.com/welcome.asp','Free Online Surveys')"><img name="bookmarkus" border="0" src="navbar2/nav2_bookmark_us.gif" width="104" height="20"></a></td>
   </tr>
 </tbody></table>
   
