--- a/t/th/the/thecomedynetwork.ca.html
+++ b/t/th/the/thecomedynetwork.ca.html
@@ -1,7 +1,11 @@
-<!--The following is the downloaded HTML source of the thecomedynetwork.ca privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610003959id_/http%3A//www.thecomedynetwork.com/legal.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecomedynetwork.ca privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206131632id_/http%3A//www.thecomedynetwork.com/legal.asp) for the most accurate reproduction.-->
 
-<html><head>
+<html><head><script language="JavaScript">
+SouthPark="true";
+</script> 
+
+
 
 <title>TheComedyNetwork.ca</title>
 
@@ -133,7 +137,7 @@ window.open(eval("allurls" + rnum.toString())[rotatecount[rnum]],'clickthis',eva
 <script language="JavaScript1.1">
 if (!ord) {var abc = Math.random() + "";	var ord = abc.substring(2,abc.length);}
 document.write('<SCR'+'IPT LANGUAGE="JavaScript1.1" SRC="http://ad.ca.doubleclick.net/adj/comedynetwork/;abr=!webtv;mode=;loc=;adpg=;sect=ent;arena=tv;arena=arts;unit=dhtml;kw=;pos=banTop;sz=468x60;tile=1;ord='+ord+'?"><\/SCR'+'IPT>');
-</script><script language="JavaScript1.1" src="http://ad.ca.doubleclick.net/adj/comedynetwork/;abr=!webtv;mode=;loc=;adpg=;sect=ent;arena=tv;arena=arts;unit=dhtml;kw=;pos=banTop;sz=468x60;tile=1;ord=13008767646773234?"></script></td></tr><tr valign="top"><td><img name="index2_r3_c2" src="/images/index2_r3_c2.gif" width="468" height="11" border="0"></td></tr></tbody></table></td><td><img name="index2_r1_c5" src="/images/index2_r1_c5.gif" width="86" height="74" border="0"></td></tr></tbody></table></td></tr><tr><td>
+</script><script language="JavaScript1.1" src="http://ad.ca.doubleclick.net/adj/comedynetwork/;abr=!webtv;mode=;loc=;adpg=;sect=ent;arena=tv;arena=arts;unit=dhtml;kw=;pos=banTop;sz=468x60;tile=1;ord=3542841133295087?"></script></td></tr><tr valign="top"><td><img name="index2_r3_c2" src="/images/index2_r3_c2.gif" width="468" height="11" border="0"></td></tr></tbody></table></td><td><img name="index2_r1_c5" src="/images/index2_r1_c5.gif" width="86" height="74" border="0"></td></tr></tbody></table></td></tr><tr><td>
 
 <table border="0" cellpadding="0" cellspacing="0" width="618"><tbody><tr><td width="75">&nbsp;</td><td width="543"><img src="images/bt-legal.gif" width="463" height="46" border="0"></td></tr><tr><td width="75">&nbsp;</td><td width="543">&nbsp;</td></tr><tr><td width="75" height="53">&nbsp;</td><td width="543" height="53" valign="top"><font color="#FFFFFF">
 					<div align="center"><b>Bell Globemedia Interactive<br>Website Privacy Policy</b></div>
