--- a/n/ns/nsh/nshss.org.html
+++ b/n/ns/nsh/nshss.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nshss.org privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611070134id_/http%3A//www.nshss.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nshss.org privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206145239id_/http%3A//nshss.org/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
