bmi.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;entertainment",
  "char_count": 12843,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.11,
  "homepage_snapshot_redirected_domain": "bmi.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001012008id_/http://www.bmi.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001012008id_/http%3A//bmi.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bmi.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206152226id_/http%3A//www.bmi.com/about/legal/privacy.asp",
  "policy_title": "Web Policies",
  "policy_url": "bmi.com/about/legal/privacy.asp",
  "sha1": "a0942c65a53150a1632a697d6233f6ec3b04ba10",
  "simhash": 8631191669895967078,
  "simhash_updated": true,
  "site_hostname": "bmi.com",
  "site_url": "http://bmi.com",
  "smog": 17.04,
  "strict_updated": true,
  "timestamp": "20041206152226",
  "word_count": 2023,
  "year": 2004
}

--- a/b/bm/bmi/bmi.com.html
+++ b/b/bm/bmi/bmi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bmi.com privacy policy that was archived on 2004-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040623075418id_/http%3A//www.bmi.com/about/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bmi.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206152226id_/http%3A//www.bmi.com/about/legal/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Web Policies</title>
@@ -13,8 +13,13 @@
     <td><table width="100%" height="60" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr valign="top">
           <td width="80" height="60" valign="top"><a href="/"><img src="/images/bmi_logo.gif" width="73" height="59" border="0"></a></td>
-          <td width="230" align="center" valign="middle"><div align="center"><font color="#FFFFFF" face="Arial, Helvetica, sans-serif">Worldwide technology leader.</font></div></td>
-          <td align="right" valign="top"><a href="/ringtones"><img src="/ads/publisher_message.jpg" alt="An Important Message for BMI Publishers" width="468" height="60" border="0"></a></td>
+          <td width="230" align="center" valign="middle"><div align="center"><font color="#FFFFFF" face="Arial, Helvetica, sans-serif">The most visited professional music website.</font></div></td>
+          <td align="right" valign="top">
+		  <a href="/news/200412/20041203a.asp"><img src="/ads/digital_rights.jpg" alt="An Important Position Statement on Digital Royalties" width="468" height="60" border="0"></a>
+		  <!-------
+		  <a href="/songwriter/tools/privileges/computer.asp"><img src="/ads/masterwriter.gif" alt="MasterWriter" width="468" height="60" border="0" /></a>
+--------->
+</td>
         </tr>
     </tbody></table></td>
   </tr>
@@ -480,7 +485,7 @@
             <br>
             <a href="/about/sitemap.asp" class="footerlinks"> Site Map</a><br>
             <a href="/join/" class="footerlinks">join</a><span class="footertext"> | </span><a href="/" class="footerlinks">songwriter</a><span class="footertext"> | </span><a href="/licensing/" class="footerlinks">licensing</a><span class="footertext"> | </span><a href="/musicworld/" class="footerlinks">musicworld</a><span class="footertext"> | </span><a href="/news/" class="footerlinks">news</a><span class="footertext"> | </span><a href="/showcases/" class="footerlinks">events</a><span class="footertext"> | </span><a href="/video/" class="footerlinks">video</a><span class="footertext"> | </span><a href="/search/" class="footerlinks">search</a><span class="footertext"> | </span><a href="/about/" class="footerlinks">about</a> <br>
-            <span class="footertext">All content Copyright 1994-2004 ©,
+            <span class="footertext">All content copyright © 1994-2004,
             Broadcast Music, Inc. unless otherwise specified.<br>
         All marks indicated by the ® are registered trademarks of Broadcast
         Music, Inc.</span><br>
