--- a/j/ju/jus/justfreegames.com.html
+++ b/j/ju/jus/justfreegames.com.html
@@ -1,34 +1,32 @@
-<!--The following is the downloaded HTML source of the justfreegames.com privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612150422id_/http%3A//www.justfreegames.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the justfreegames.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206152353id_/http%3A//justfreegames.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>SUNNY GAMES LLC WEB SITE PRIVACY STATEMENT</title>
+<title>JUST FREE GAMES.COM WEB SITE PRIVACY STATEMENT</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="3"><b>SUNNY 
-  GAMES LLC WEB SITE PRIVACY STATEMENT</b></font> </div>
-<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Sunny Games LLC 
+<div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="3"><b>JUSTFREEGAMES.COM WEB SITE PRIVACY STATEMENT</b></font> </div>
+<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Just Free Games.com  
   is committed to protecting your privacy online. To further this commitment, 
   we have adopted an Online Privacy Policy that guides how we collect, store, 
   and use the information collected about you online.<br>
   <br>
-  <b>What information does Sunny Games LLC collect?</b><br>
-  Sunny Games LLC may request and/or collect information from you on a voluntary 
+  <b>What information does </b><strong>Just Free Games.com</strong><b> collect?</b><br>
+  Just Free Games.com may request and/or collect information from you on a voluntary 
   basis when you: register with us; participate in contests, events or promotions; 
-  and/or send questions or comments via e-mail to Sunny Games LLC customer support. 
+  and/or send questions or comments via e-mail to Just Free Games.com customer support. 
   The requested information may include personal information such as your name 
   and e-mail address.<br>
   If you are under the age of 13, you will need your parent or guardian's consent 
   before you can provide any personal information to us for purposes of registration 
   and other online activities. <br>
-  </font></p>
+</font></p>
 <ul>
   <li><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Sign up to our free newsletter <br>
     If you wish to sign up to our free newsletter, you will be asked to supply 
-    personal information such as your e-mail address. With your permission, Sunny 
-    Games LLC uses such information to periodically contact you with product information 
+    personal information such as your e-mail address. With your permission, Just Free Games.com uses such information to periodically contact you with product information 
     news, special offers and relevant announcements;</font></li>
   <li><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Promotions <br>
     To participate in some of our promotions, you may be asked to provide an e-mail 
@@ -48,32 +46,31 @@
 <p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>Opt out </b><br>
   If you are receiving e-mails or regular mail and at a later date you choose 
   to opt out and have your name removed from the e-mailing list, you can do so by 
-  using the link included with a Sunny Games LLC e-mail.<br>
+  using the link included with a Just Free Games.com e-mail.<br>
   <br>
   <b>Cookies</b><br>
-  Sunny Games LLC may use cookies to improve the use of our websites. A "cookie" 
+  Just Free Games.com may use cookies to improve the use of our websites. A "cookie" 
   is a small file that websites often store on a user's 
   computer. Storage of cookies on your system provides an easy and convenient 
   method for us to personalize your experience on our websites. For example, cookies 
   allow us to remember your screen name, tell us that you have visited our website 
   before, and may contain information that will make your next visit to our website 
   more enjoyable. However, we do not use cookies to store personal information 
-  such as your name. In addition, Sunny Games LLC does not use cookies to retrieve 
+  such as your name. In addition, Just Free Games.com does not use cookies to retrieve 
   information from your computer that was not originally sent in a cookie. You 
   can always disable cookies or set your browser to alert you when cookies are 
   being sent to your computer.<br>
   <br>
   <b>IP Addresses</b><br>
-  Sunny Games LLC may also collect your IP address for safety and security purposes. 
+  Just Free Games.com may also collect your IP address for safety and security purposes. 
   An IP address is a number that is used by computers on the network to identify 
   your computer every time you log on to the Internet. <br>
   <br>
   <b>Log Files</b><br>
-  Other non-personal information collected by Sunny Games LLC is in the form of 
+  Other non-personal information collected by Just Free Games.com is in the form of 
   logs - files that record website activity, including how many "hits" 
   a particular web page is getting (a.k.a., "click-through data"). For 
-  example, log file entries are generated every time a visitor clicks the "Online 
-  Shop" icon on our site. These entries enable Sunny Games LLC to assess 
+  example, log file entries are generated every time a visitor clicks the "Home" icon on our site. These entries enable Just Free Games.com to assess 
   overall site activity, track interest in advertised sales, track interest in 
   purchase behavior, and troubleshoot technical concerns.<br>
   Through the use of log files, we may also collect certain demographic information 
@@ -82,22 +79,22 @@
   the domain name of your Internet service provider (e.g., America Online, Earthlink).<br>
   <b><br>
   Linking to third party sites </b><br>
-  To provide relevant information not found on our Web site, Sunny Games LLC may 
+  To provide relevant information not found on our Web site, Just Free Games.com may 
   provide links from our Web sites to third party Web sites and we encourage our 
   users to read third party sites' privacy policies before submitting personal 
-  information. Sunny Games LLC is not responsible for the privacy practices of 
-  the content of third party sites'. Sunny Games LLC hereby disclaims any representations 
+  information. Just Free Games.com is not responsible for the privacy practices of 
+  the content of third party sites'. Just Free Games.com hereby disclaims any representations 
   or warranties expressed on any site other than its own site.<br>
   <br>
   <b>Who is collecting my personal information?</b><br>
   Any personal information that you disclose while visiting any of our websites 
-  is collected by Sunny Games LLC, and is used in the manner specified above.<br>
+  is collected by Just Free Games.com, and is used in the manner specified above.<br>
   <br>
   <b>Questions and Complaints</b><br>
   If you have any questions, complaints or comments regarding our Privacy Policy 
-  Statement, please contact us via email at <b>feedback@sunnygames.com</b>.</font><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><br>
+  Statement, please contact us via web-form. <br>
   <br>
-  By using this site, you signify your assent to the Sunny Games LLC Online Privacy 
+  By using this site, you signify your assent to the Just Free Games.com Online Privacy 
   Policy. If you do not agree to this Privacy Policy, please do not use this site. 
   We reserve the right to make changes to this Privacy Policy. Please check back 
   from time to time to ensure that you are aware of these changes. Your continued 
