ubid.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 10621,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.23,
  "homepage_snapshot_redirected_domain": "ubid.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001040322id_/http://ubid.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001040322id_/http%3A//ubid.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ubid.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206154025id_/http%3A//www.ubid.com/help/policies_privacy.asp",
  "policy_title": "uBid.com - Help Pages",
  "policy_url": "ubid.com/help/policies_privacy.asp",
  "sha1": "e2be878ab50ae755c8608bf2725c7f72247f2464",
  "simhash": 14596658439449395504,
  "simhash_updated": true,
  "site_hostname": "ubid.com",
  "site_url": "http://ubid.com",
  "smog": 13.4,
  "strict_updated": true,
  "timestamp": "20041206154025",
  "word_count": 1768,
  "year": 2004
}

--- a/u/ub/ubi/ubid.com.html
+++ b/u/ub/ubi/ubid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ubid.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605162321id_/http%3A//www.ubid.com/help/policies_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ubid.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206154025id_/http%3A//www.ubid.com/help/policies_privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <style type="text/css">
@@ -182,53 +182,48 @@ border-bottom: 1px solid #fff;
 
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" rightmargin="0" marginheight="0" marginwidth="0" marginright="0">
 
-<table width="100%" cellpadding="0" border="0" cellspacing="0" height="62">
+
+<table width="100%" cellpadding="0" border="0" cellspacing="0" height="60">
   <tbody><tr> 
-    <td bgcolor="#003399" height="62" valign="top"><img src="/inc/img/top_auction_tabs.gif" width="770" height="62" alt="" border="0" usemap="#top"></td>
-    <td bgcolor="#003399" width="100%" valign="top"><img src="/inc/img/top_auction_tabs_slice.gif" width="100%" height="62"></td>
+    <td bgcolor="#003399" height="60" valign="top"><img src="/inc/img/top_auction_tabs_NEW.gif" width="770" height="60" alt="" border="0" usemap="#top"></td>
+    <td bgcolor="#003399" width="100%" valign="top">&nbsp;</td>
   </tr>
 </tbody></table>
 
 <!--Image Maps-->
 <map name="top"> 
-  <area shape="rect" coords="29,5,118,47" href="http://www.ubid.com" alt="Auction Home Page" title="Auction Home Page">
-  <area alt="Auctions- Bid Now! Great Deals" shape="poly" coords="150,62,150,55,165,37,294,37,294,62" href="http://www.ubid.com" title="Auctions- Bid Now! Great Deals">
-  <area alt="New User Tutorial" coords="668,42,763,58" href="http://www.ubid.com/help/topic1.asp">
-  <area alt="Register to Bid or Buy!" coords="589,40,664,58" href="https://www.ubid.com/app/sgnon/default.asp?refloc=reg" title="Register to Bid or Buy!">
-  <area alt="My Page" coords="529,42,583,58" href="https://www.ubid.com/app/mypage/">
-  <area alt="Help" coords="490,42,523,58" href="http://www.ubid.com/help/">
-  <area alt="Superstore - Buy Now! Great Prices" shape="poly" coords="294,62,294,55,309,37,484,37,484,62" href="http://superstore.ubid.com">
-</map>
+  <area alt="My Page" coords="447,3,506,18" href="https://www.ubid.com/app/mypage/">
+  <area alt="Help" coords="403,3,437,18" href="http://www.ubid.com/help/">
+  <area alt="Register to Bid or Buy!" coords="516,3,654,19" href="https://www.ubid.com/app/sgnon/default.asp?refloc=reg" title="Register to Bid or Buy!">
+  <area alt="New User Tutorial" coords="663,3,768,18" href="http://www.ubid.com/help/topic1.asp">
+  <area shape="rect" coords="10,18,97,56" href="http://www.ubid.com" alt="Auction Home Page" title="Auction Home Page">
+  </map>
 <!--Image Maps-->
 
 <script src="/inc/pagetop/top_auction_menu.js" language="JavaScript1.2" type="text/javascript"></script>
 
-<table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#FFCC00">
+<table width="100%" cellpadding="0" border="0" cellspacing="0" bgcolor="#6699FF">
 	<tbody><tr> 
-		<td bgcolor="#ffcc00" width="700">
+		<td bgcolor="#6699FF" width="700">
 			<table width="70" border="0" cellspacing="0" cellpadding="0" valign="top">
-				<tbody><tr><td><img src="/img/dot_clear.gif" height="1"></td></tr>
-				<tr><td><img src="/img/top_auction_bar_0.gif" width="700" height="26" border="0" usemap="#nav_bar_home"></td></tr>
+				<tbody><tr><td><img src="/img/top_auction_bar_0.gif" width="700" height="26" border="0" usemap="#nav_bar_home"></td></tr>
 			</tbody></table>
 		</td>
-		<td bgcolor="#ffcc00" width="20" align="left" valign="top">
+		<td bgcolor="#6699FF" width="20" align="left" valign="top">
 			<table border="0" cellpadding="0" cellspacing="0" width="5" valign="top">
-				<tbody><tr><td><img src="/img/dot_clear.gif" height="1" width="5"></td></tr>
-				<tr><td><img src="/img/top_auction_bar_slice.gif" height="26" width="5"></td></tr>
+				<tbody><tr><td><img src="/img/top_auction_bar_slice.gif" height="26" width="5"></td></tr>
 			</tbody></table>
 		</td>
-		<td bgcolor="#ffcc00" width="70" align="left" valign="top"> 
+		<td bgcolor="#6699FF" width="70" align="left" valign="top"> 
 			<table border="0" cellspacing="0" cellpadding="0" valign="top">
-				<tbody><tr><td><img src="/img/dot_clear.gif" height="1"></td></tr>
-				<tr><td width="66" height="1" align="center"><img src="/img/auction_passport_top.gif" width="66" height="3"></td></tr>
+				<tbody><tr><td width="66" height="4" align="center"><img src="/img/auction_passport_top.gif" width="66" height="4"></td></tr>
 				<tr><td height="19"><a href="/app/sgnon/PassportSignIn.asp"><img src="/img/signin.gif" border="0" alt="Sign in to uBid with Passport."></a></td></tr>
-				<tr><td width="66" height="4" align="center"><img src="/img/auction_passport_bottom.gif" width="66" height="4"></td></tr>
+				<tr><td width="66" height="3" align="center"><img src="/img/auction_passport_bottom.gif" width="66" height="3"></td></tr>
 			</tbody></table>
 		</td>
-		<td bgcolor="#ffcc00" width="100%" valign="top">
+		<td bgcolor="#6699FF" width="100%" valign="top">
 			<table border="0" cellpadding="0" cellspacing="0" width="100%" valign="top">
-				<tbody><tr><td><img src="/img/dot_clear.gif" height="1" width="100%"></td></tr>
-				<tr><td><img src="/img/top_auction_bar_slice.gif" height="26" width="100%"></td></tr>
+				<tbody><tr><td><img src="/img/top_auction_bar_slice.gif" height="26" width="100%"></td></tr>
 			</tbody></table>
 		</td>
 	</tr>
@@ -248,8 +243,9 @@ border-bottom: 1px solid #fff;
 </map>
 
 <table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td colspan="2" height="5"><img src="/img/cmn/dot_clear.gif" width="1" height="5"></td></tr><tr>
-    <td width="569"><a href="http://www.ubid.com/cat/get_cat_page.asp?CatID=1357"><img src="/inc/img/vp_569x25_060104_digitalcameras_0.gif" width="569" height="25" border="0"></a></td>
-    <td><a href="http://www.ubid.com/app/search/closing_this_hour.asp"><img src="/inc/img/top_ACTH.gif" width="201" height="25" border="0"></a></td></tr></tbody></table><map name="m_top_auctions"> 
+    <td width="569"><a href="http://s0b.bluestreak.com/ix.e?tr&amp;s=301985&amp;a=221466&amp;u=http://www.ubid.com/promo/holiday/"><img src="/inc/img/vp_569x35_0_112404_HolidayGuide_1.gif" width="569" height="35" border="0"></a></td>
+    <td valign="middle"><a href="http://www.ubid.com/app/search/closing_this_hour.asp"><img src="/inc/img/top_ACTH.gif" width="201" height="25" border="0"></a></td>
+  </tr></tbody></table><map name="m_top_auctions"> 
   <area shape="poly" coords="27,24,117,24,117,68,27,68,27,24" href="http://www.ubid.com/cat/get_cat_page.asp?CatID=0">
   <area shape="poly" coords="629,33,637,30,639,27,640,23,637,16,630,13,630,13,535,13,535,13,534,13,526,16,524,19,523,23,524,27,526,30,534,33,629,33" href="https://www.ubid.com/app/sgnon/default.asp">
   <area shape="poly" coords="414,69,414,49,413,46,409,45,312,45,304,49,289,69,414,69" href="http://superstore.ubid.com/is-bin/INTERSHOP.enfinity/eCS/Store">
@@ -345,7 +341,7 @@ select.quicksearch {
 </td>
     <td width="100%" valign="top" align="center">
     
-<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="468" height="060" src="http://servedby.advertising.com/site=245050/bnum=66576856/size=468060/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=245050/size=468060/bnum=66576856/optn=1"></SCR'+'IPT>');</SCRIPT></iframe>
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="468" height="060" src="http://servedby.advertising.com/site=245050/bnum=69688288/size=468060/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=245050/size=468060/bnum=69688288/optn=1"></SCR'+'IPT>');</SCRIPT></iframe>
     </td>
   </tr>
 </tbody></table> 
@@ -416,7 +412,7 @@ select.quicksearch {
           <td id="navcategory" bgcolor="#f5f5eb"><a href="http://www.ubid.com/help/topic38.asp">Still having problems? Contact our Reps</a></td>
         </tr>
         <tr> 
-          <td id="navcategory" bgcolor="#f5f5eb"><a href="http://www.ubid.com/help/topic_list10.asp">Contacting uBid Corporate Directory</a></td>
+          <td id="navcategory" bgcolor="#f5f5eb"><a href="http://www.ubid.com/help/topic_list10.asp">Contacting ubid Corporate Directory</a></td>
         </tr>
         <tr> 
           <td id="navcategory" bgcolor="#f5f5eb"><a href="http://www.ubid.com/help/topic69.asp">Quick Checkout</a></td>
@@ -440,7 +436,7 @@ select.quicksearch {
 </tr>
 </tbody></table>
 
-<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="125" height="125" src="http://servedby.advertising.com/site=244822/bnum=22627975/size=125125/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=244822/size=125125/bnum=22627975/optn=1"></SCR'+'IPT>');</SCRIPT></iframe><br>
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="125" height="125" src="http://servedby.advertising.com/site=244822/bnum=77601227/size=125125/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=244822/size=125125/bnum=77601227/optn=1"></SCR'+'IPT>');</SCRIPT></iframe><br>
 <table cellspacing="0" cellpadding="0" border="0">
   <tbody><tr>
     <td><img src="/img/cmn/dot_clear.gif" height="4"></td>
@@ -467,7 +463,7 @@ select.quicksearch {
 <table cellspacing="0" cellpadding="0" width="140" border="0">
   <tbody><tr bgcolor="#003399"> 
     <td nowrap="" align="middle" bgcolor="#003399">
-      <font color="#FFFFFF" size="2"><b>Connect with uBid</b></font>
+      <font color="#FFFFFF" size="2"><b>Connect with ubid</b></font>
     </td>
     <td nowrap="" align="right" bgcolor="#003399" width="3">
       <img src="/img/leftnav_curve_blue.gif" width="3" height="16">
@@ -494,7 +490,7 @@ select.quicksearch {
           <td align="top" width="16" valign="top">
             <img src="/img/cmn/red_dot_12x10.gif" width="10">
           </td>            
-          <td><font size="1" face="Arial" color="#003399">Use <a href="http://www.ubid.com/app/tell/">Tell-a-Buddy</a> to email a friend about uBid.</font></td>
+          <td><font size="1" face="Arial" color="#003399">Use <a href="http://www.ubid.com/app/tell/">Tell-a-Buddy</a> to email a friend about ubid.</font></td>
         </tr>
         <tr bgcolor="#F5F5EB"> 
           <td colspan="2"><img src="/img/cmn/br.gif" width="100%" height="4"></td>
@@ -533,7 +529,7 @@ select.quicksearch {
 <table cellspacing="0" cellpadding="0" width="140" border="0">
   <tbody><tr bgcolor="#003399"> 
     <td nowrap="" align="middle" bgcolor="#003399">
-      <font color="#FFFFFF" size="2"><b>More about uBid</b></font>
+      <font color="#FFFFFF" size="2"><b>More about ubid</b></font>
     </td>
     <td nowrap="" align="right" bgcolor="#003399" width="3">
       <img src="/img/leftnav_curve_blue.gif" width="3" height="16">
@@ -558,7 +554,7 @@ select.quicksearch {
           <td align="center" width="16" valign="top">
             <img src="/img/cmn/red_dot_12x10.gif" width="10" height="10">
           </td>
-          <td bgcolor="#F5F5EB"><font size="1" face="Arial" color="#003399"><a href="http://www.ubid.com/about/">About uBid</a>.</font></td>
+          <td bgcolor="#F5F5EB"><font size="1" face="Arial" color="#003399"><a href="http://www.ubid.com/about/">About ubid</a>.</font></td>
         </tr>
         <tr bgcolor="#F5F5EB"> 
           <td colspan="2"><img src="/img/cmn/br.gif" width="100%" height="4"></td>
@@ -660,7 +656,7 @@ uBid operates with a VeriSign Digital Server Certificate, featuring cryptographi
     </td>
     <td width="120">
 		
-<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="120" height="600" src="http://servedby.advertising.com/site=244729/bnum=68308152/size=120600/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=244729/size=120600/bnum=68308152/optn=1"></SCR'+'IPT>');</SCRIPT></iframe>
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="120" height="600" src="http://servedby.advertising.com/site=244729/bnum=46102076/size=120600/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=244729/size=120600/bnum=46102076/optn=1"></SCR'+'IPT>');</SCRIPT></iframe>
     </td>
 </tr>
 </tbody></table>
@@ -683,7 +679,7 @@ uBid operates with a VeriSign Digital Server Certificate, featuring cryptographi
   <tbody><tr> 
     <td width="140"><img src="/img/cmn/dot_clear.gif" width="140" height="1"></td>
     <td align="center" width="100%">
-<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="468" height="060" src="http://servedby.advertising.com/site=245050/bnum=09688692/size=468060/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=245050/size=468060/bnum=09688692/optn=1"></SCR'+'IPT>');</SCRIPT></iframe></td>
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="468" height="060" src="http://servedby.advertising.com/site=245050/bnum=84585395/size=468060/tags=1/optn=1"><SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); document.write('SRC="http://servedby.advertising.com/site=245050/size=468060/bnum=84585395/optn=1"></SCR'+'IPT>');</SCRIPT></iframe></td>
   </tr>
 </tbody></table>		
 
@@ -715,6 +711,7 @@ uBid operates with a VeriSign Digital Server Certificate, featuring cryptographi
   </tr>
   </tbody> 
 </table>
+
 <!-- end pagefooter -->
 
 
