--- a/l/lo/loq/loquax.co.uk.html
+++ b/l/lo/loq/loquax.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the loquax.co.uk privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607211651id_/http%3A//www.loquax.co.uk/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the loquax.co.uk privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206155052id_/http%3A//www.loquax.co.uk/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Loquax Privacy Policy</title>
@@ -57,7 +57,7 @@ document.write('IPT>');
 
 document.write('</IFRAME>');
 // End Hide -->
-</script><iframe src="http://ads.accelerator-media.com/hserver/acc_random=1580447203078/SITE=LOQUAX/AAMSZ=BANNER/AREA=ENTERTAINMENT" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><SCRIPT SRC="http://ads.accelerator-media.com/jnserver/acc_random=1580447203078/SITE=LOQUAX/AAMSZ=BANNER/AREA=ENTERTAINMENT"></SCRIPT></iframe>
+</script><iframe src="http://ads.accelerator-media.com/hserver/acc_random=1580447202001/SITE=LOQUAX/AAMSZ=BANNER/AREA=ENTERTAINMENT" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><SCRIPT SRC="http://ads.accelerator-media.com/jnserver/acc_random=1580447202001/SITE=LOQUAX/AAMSZ=BANNER/AREA=ENTERTAINMENT"></SCRIPT></iframe>
 
 <noscript>
   <A HREF="http://ads.accelerator-media.com/adclick/SITE=LOQUAX/AAMSZ=BANNER/AREA=ENTERTAINMENT">
@@ -65,13 +65,6 @@ document.write('</IFRAME>');
   </A>
 </noscript>
 </p></td></tr></tbody></table>
-<table width="760" border="0" bordercolor="#CCCCFF" cellpadding="4" cellspacing="0" bgcolor="#CCCCFF">
-<tbody><tr>
-<td bgcolor="#CCCCFF"><center><font class="medtext" color="#000000">
-<b><a href="http://www.loquax.co.uk" style="TEXT-DECORATION: underline">The UK Competitions Portal</a></b>
-</font></center></td>
-</tr>
-</tbody></table>
 <table width="760" border="0" bordercolor="#3333CC" cellpadding="2" cellspacing="0" bgcolor="#3333CC">
 <tbody><tr>
 
@@ -85,6 +78,11 @@ document.write('</IFRAME>');
 
 </b></p></td>
 
+</tr>
+</tbody></table><table width="760" border="0" bordercolor="#3399cc" cellpadding="4" cellspacing="0" bgcolor="#3399cc">
+<tbody><tr>
+<td bgcolor="#3399cc"><p align="right"><font class="medtext" color="#ffffff">
+<b><a href="http://www.loquax.co.uk" style="TEXT-DECORATION: underline">Competitions</a></b> | <b><a href="http://www.loquaxgames.com/" style="TEXT-DECORATION: underline" target="_blank">Instant Win</a></b> | <b><a href="http://www.loquaxbingo.com" style="TEXT-DECORATION: underline" target="_blank">Bingo</a></b> | <b><a href="http://shop.loquax.co.uk" style="TEXT-DECORATION: underline">Shop</a></b> | <b><a href="http://offers.loquax.co.uk" style="TEXT-DECORATION: underline">Offers</a></b>&nbsp;&nbsp;&nbsp;</font></p></td>
 </tr>
 </tbody></table>
 
@@ -106,20 +104,28 @@ document.write('</IFRAME>');
 </tr>
 
 
-<tr><td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://your.loquax.com/" target="_self" style="color: #000000">Your Loquax</a></b></font></td></tr>
+<tr><td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://your.loquax.co.uk/" target="_self" style="color: #000000">Your Loquax</a></b></font></td></tr>
 
 <tr>
-<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="/competitions/" style="color: #000000" target="_self">New Competitions</a></b></font></td>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/competitions/" style="color: #000000" target="_self">New Competitions</a></b></font></td>
 </tr>
 
-<tr><td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="/competitions/closingsoon.htm" style="color: #000000" target="_self">Closing Comps</a></b></font></td>
+<tr><td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/competitions/closingsoon.htm" style="color: #000000" target="_self">Closing Comps</a></b></font></td>
 </tr>
 
 <tr><td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/wwwcomp/daily.htm" style="color: #000000" target="_self">Daily Entry</a></b></font></td>
 </tr>
 
 <tr>
-<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="/competitions/prizedir.htm" style="color: #000000" target="_self">Find Competitions</a></b></font></td>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/christmas.htm" style="color: #000000" target="_self">Christmas 2004</a></b></font></td>
+</tr>
+
+<tr>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/competitions/quickcomps.htm" style="color: #000000" target="_self">Quick Comps</a></b></font></td>
+</tr>
+
+<tr>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/competitions/prizedir.htm" style="color: #000000" target="_self">Prize Directory</a></b></font></td>
 </tr>
 
 <tr>
@@ -143,6 +149,15 @@ document.write('</IFRAME>');
 <tr>
 <td width="100%" class="buttonid"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/webmaster/compsubmit2.htm" style="color: #000000" target="_self"><b>Add Competitions</b></a></font></td>
 </tr>
+
+<tr>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/prizes/" style="color: #000000" target="_self"><b>Search</b></a></font></td>
+</tr>
+
+<tr>
+<td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://newsletter.loquax.co.uk/" style="color: #000000" target="_self">Newsletter</a></b></font></td>
+</tr>
+
 <tr>
 <td width="100%" class="buttoncomp"><font class="medtext" color="#ffffff">&nbsp;<b>Community</b></font></td>
 </tr>
@@ -163,6 +178,9 @@ document.write('</IFRAME>');
 <td width="100%" class="buttonid"><font class="medtext">&nbsp;<b><a href="http://www.loquax.co.uk/community/" style="color: #000000" target="_self">Useful Tools</a></b></font></td>
 </tr>
 
+
+
+
 <tr>
 <td width="100%" class="buttoncomp"><font class="medtext" color="#ffffff">&nbsp;<b>Pay to Play</b></font></td>
 </tr>
@@ -182,15 +200,17 @@ document.write('</IFRAME>');
 <td width="100%" class="buttonid"><font class="medtext">&nbsp;<a href="http://prizegames.loquax.co.uk" style="color: #000000" target="_self"><b>Prize Games</b></a></font></td>
 </tr>
 
+
+
 <tr>
 <td width="100%" class="buttoncomp"><font class="medtext" color="#ffffff">&nbsp;<b>Shop &amp; Offers</b></font></td>
 </tr>
 <tr>
-<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://offers.loquax.co.uk" style="color: #000000" target="_self">Latest Offers</a></font></td>
+<td width="100%" class="buttonid"><b><font class="medtext">&nbsp;<a href="http://offers.loquax.co.uk" style="color: #000000" target="_self">Latest Offers</a></font></b></td>
 </tr>
 
 <tr>
-<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://shop.loquax.co.uk" style="color: #000000" target="_self">Shop Loquax</a></font></td>
+<td width="100%" class="buttonid"><b><font class="medtext">&nbsp;<a href="http://shop.loquax.co.uk" style="color: #000000" target="_self">Shop Loquax</a></font></b></td>
 </tr>
 
 <tr>
@@ -218,8 +238,17 @@ document.write('</IFRAME>');
 <tr>
 <td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/website/" style="color: #000000" target="_self">About Loquax</a></font></td>
 </tr>
+
 <tr>
-<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/affiliates/" style="color: #000000" target="_self">Affiliate Program</a></font></td>
+<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/advertise.htm" style="color: #000000" target="_self">Advertise</a></font></td>
+</tr>
+
+<tr>
+<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/sponsorship.htm" style="color: #000000" target="_self">Comp Sponsors</a></font></td>
+</tr>
+
+<tr>
+<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/affiliates/" style="color: #000000" target="_self">Affiliates</a></font></td>
 </tr>
 <tr>
 <td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/webmaster/" style="color: #000000" target="_self">Webmaster's Guide</a></font></td>
@@ -227,9 +256,6 @@ document.write('</IFRAME>');
 
 <tr>
 <td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/distribution/" style="color: #000000" target="_self">Free Content</a></font></td>
-</tr>
-<tr>
-<td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/htdig/searchopt.htm" style="color: #000000" target="_self">Search Loquax</a></font></td>
 </tr>
 <tr>
 <td width="100%" class="button"><font class="medtext">&nbsp;<a href="http://www.loquax.co.uk/index.htm?popup=off" style="color: #000000" target="_self">No Pop Ups</a></font></td>
@@ -323,7 +349,7 @@ go to <a href="http://www.engage.com/privacy">http://www.engage.com/privacy</a>.
 
 
 
-<p><a href="http://www.loquaxbingo.com" target="_blank"><img src="http://www.loquax.co.uk/competitions/images/loqbin120.gif" border="0"></a><br><font class="smalltext"><b><a href="http://www.loquaxbingo.com" target="_blank">Play Bingo - Win Cash</a></b>
+<p><a href="http://readersdigestmagazine.at/loquax?CTY=1&amp;CID=909" target="_blank"><img src="http://b1.perfb.com/b1.php?ID=909&amp;PURL=readersdigestmagazine.at/loquax" border="0"></a><br><font class="smalltext"><b><a href="http://readersdigestmagazine.at/loquax?CTY=1&amp;CID=909" target="_blank">Readers Digest Offer</a></b>
 
 
 </font></p><p><font class="smalltext">
@@ -346,13 +372,15 @@ document.write('IPT>');
 
 document.write('</IFRAME>');
 // End Hide -->
-</script><iframe src="http://ads.accelerator-media.com/hserver/acc_random=1580447203123/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="120" height="600"><SCRIPT SRC="http://ads.accelerator-media.com/jnserver/acc_random=1580447203123/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT"></SCRIPT></iframe>
+</script><iframe src="http://ads.accelerator-media.com/hserver/acc_random=1580447202019/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="120" height="600"><SCRIPT SRC="http://ads.accelerator-media.com/jnserver/acc_random=1580447202019/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT"></SCRIPT></iframe>
 
 <noscript>
   <A HREF="http://ads.accelerator-media.com/adclick/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT">
   <IMG SRC="http://ads.accelerator-media.com/nserver/SITE=LOQUAX/AAMSZ=SKYSCRAPER/AREA=ENTERTAINMENT">
   </A>
 </noscript>
+
+<iframe src="http://impgb.tradedoubler.com/imp/iframe/691135/29602" width="1" height="1" frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </font></p></center></td>
 
 
