--- a/f/fx/fxs/fxsol.com.html
+++ b/f/fx/fxs/fxsol.com.html
@@ -1,12 +1,30 @@
-<!--The following is the downloaded HTML source of the fxsol.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602192937id_/http%3A//fxsol.com/legal/privacy_policy.fx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fxsol.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206155715id_/http%3A//www.fxsol.com/legal/privacy_policy.fx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>FX Solutions | GTS Platform | Privacy Policy</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<style type="text/css" media="screen">@import "/css/fxs-int-style.css";</style>	
-	<link rel="stylesheet" href="/css/fxs-int-print.css" type="text/css" media="print">
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<meta name="description" content="FX Solutions, primary marker maker in online forex trading, online currency trading, commission free, narrow spreads">
+	<meta name="keywords" content="forex, online forex trading, online currency trading, forex broker, forex charts, forex news, forex quotes, foreign exchange, fx trading, foreign currency trading, online forex">
+	<meta name="language" content="en-us">
+	<meta name="robots" content="all">
 
+	<link rel="stylesheet" href="/common/css/fxs-int-style.css" type="text/css" title="Default" media="screen">		
+	<link rel="stylesheet" href="/common/css/fxs-int-print.css" type="text/css" media="print">
+	
+
+	<script language="JavaScript">
+	<!-- Overture Services, Inc
+	var pm_tagname    = "universalTag.txt";
+	var pm_tagversion = "1.4";
+	var pm_accountid  = "G1ARNJLUN5JV8M2B78CVG78KJ4";
+	var pm_scripthost = "srv.perf.overture.com";
+	var pm_customargs = "";
+	var pm_querystr = "?" + "ver=" + pm_tagversion + "&aid=" + pm_accountid + pm_customargs;
+	var pm_tag = "<SCR" + "IPT LANGUAGE='JavaScript' " + "SRC=//" + pm_scripthost + "/collweb/ScriptServlet" + pm_querystr + "></SCR" + "IPT>";
+	document.write(pm_tag);
+	// -->
+	</script><script language="JavaScript" src="//srv.perf.overture.com/collweb/ScriptServlet?ver=1.4&amp;aid=G1ARNJLUN5JV8M2B78CVG78KJ4"></script>
 </head>
 
 <body>
@@ -50,18 +68,23 @@ _ex(_acct)+"&n="+_ex(_pn);_x3="&cd=1&hv=6' border=0 height=1 width=1>";_ar=
 "&bn="+_ex(_bn)+"&bv="+_bv+"&ce="+_ce+"&ss=na&sc=na&ja=na&sv="+_sv+"&con="+
 _ex(_mlc)+"&vcon="+_ex(_mlc)+"&epg="+_epg+"&hp=u&cy=u&dt=&ln=na&cp="+_ex(_cp)+
 "&pl=&prc="+_ex(_prc)+"&oid="+_ex(_oid)+"&rf="+_rf;document.write(_x2+_ar+_x3);}
-if(_bn!='Netscape'&&_bv>399)document.write("<\!"+"--");</script><noscript><img 
+if(_bn!='Netscape'&&_bv>399)document.write("<\!"+"--");
+</script><noscript><img 
 src="http://phg.hitbox.com/HG?hc=wp189&cd=1&hv=6&ce=u&hb=WR540316NBBV18EN3&n=PUT+PAGE+NAME+HERE&vcon=CONTENT+CATEGORY" border='0' width='1' height='1'></noscript><!--//-->
 <!-- END WEBSIDESTORY CODE  -->
+
+
+<!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
+<script language="javascript" src="http://server.iad.liveperson.net/hc/85188039/x.js?cmd=file&amp;file=chatScript3&amp;site=85188039&amp;&amp;imageUrl=http://www.fxsol.com/common/img/chat"> </script>
+<!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
 <div id="shadow">
 	<div id="shell">
 		<div id="masthead">
 
-		 	<a href="/"><img src="/img/masthead_fxs-title.gif" alt="go back to the FX Solutions homepage" id="logo"></a>
+		 	<a href="/"><img src="/common/img/masthead_fxs-title.gif" alt="go back to the FX Solutions homepage" id="logo"></a>
 		 <div id="adv">
 			
-			<a href="/adv/current/"><img src="/img/news/BrandNewBonus-Ext.gif" alt="New Bonus Program"></a>
-			
+			<a href="/adv/current/"><img src="/common/img/news/DecBonus.gif" alt="December Forex Bonus, Ends December 31st!"></a>		
 		 </div>
 		 
 		</div>
@@ -82,26 +105,29 @@ src="http://phg.hitbox.com/HG?hc=wp189&cd=1&hv=6&ce=u&hb=WR540316NBBV18EN3&n=PUT
 		<!-- Start Left Column -->
 			<div id="left-col">
 				<div id="direct-access"> 
-					<img src="/img/direct-access_header.gif" alt="Direct Access">
+					<img src="/common/img/direct-access_header.gif" alt="Direct Access">
 					<ul>
  					 <li>»&nbsp;<a href="/open-accounts/all_forms.fx">All Account Forms</a></li>
 					 <li>»&nbsp;<a href="https://online.fxsol.com/application/individual/">Open an Account Online</a></li>						 
 					 <li>»&nbsp;<a href="http://www.fxworldtrade.com" title="Daily Forex Commentary" target="_blank">Forex Commentary</a></li>
 					 <li>»&nbsp;<a href="/gts-platform/quick_start.fx">GTS Quick Start</a></li>
 					 <li>»&nbsp;<a href="/forex-basics/faq.fx">FAQs</a></li>	
+ 					 <li>»&nbsp;<a href="/support/">Customer Support</a></li>	
 					</ul>
 				</div>	
 					
 				<div id="free-demo">
 					<h1>Free Demo Account</h1>
-					<p>Test your forex trading skills with a $10,000 Demo</p>
-					<a href="/demo/" title="Register for a free 60 day demo account"><img src="/img/demo_reg-button.gif" alt="Register Now"></a>
-				</div>
+					<p>Test your Forex trading skills with a $10,000 Demo </p>
+					<a href="/demo/"><img src="/common/img/DemoButton.gif" alt="Register Now"></a>
+				</div>	
 			
 				<div id="left-adv">
-					<a href="/support/"><img src="/img/support_adv.gif" alt="Have a question? Contact us"></a>
+					<!-- BEGIN LivePerson Button Code -->
+					<a href="http://server.iad.liveperson.net/hc/85188039/?cmd=file&amp;file=visitorWantsToChat&amp;site=85188039&amp;byhref=1&amp;imageUrl=http://www.fxsol.com/common/img/chat" target="chat85188039" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/85188039/?cmd=file&amp;file=visitorWantsToChat&amp;site=85188039&amp;imageUrl=http://www.fxsol.com/common/img/chat&amp;referrer='+escape(document.location),'chat85188039','width=472,height=320');return false;">
+					<img src="http://server.iad.liveperson.net/hc/85188039/?cmd=repstate&amp;site=85188039&amp;&amp;ver=1&amp;imageUrl=http://www.fxsol.com/common/img/chat" name="hcIcon" width="178" height="77" border="0"></a>
+					<!-- END LivePerson Button code -->
 				</div>
-			
 			</div>
 		<!-- Start Right Column -->	
 			<div id="right-col">
@@ -143,7 +169,7 @@ src="http://phg.hitbox.com/HG?hc=wp189&cd=1&hv=6&ce=u&hb=WR540316NBBV18EN3&n=PUT
 		</div>		
 	</div>
 </div>
-<div id="lang">Language: <strong>English</strong>&nbsp;&nbsp;&nbsp;<a href="/sim-chinese/legal/privacy_policy.fx"><img src="/img/language_sim-ch.gif" alt="Simplified Chinese"></a></div>
+<div id="lang">Language: <strong>English</strong>&nbsp;&nbsp;&nbsp;<a href="/es/legal/privacy_policy.fx" title="view &quot;Privacy Policy&quot; in Español" class="grey">Español</a>&nbsp;&nbsp;&nbsp;<a href="/ch/legal/privacy_policy.fx"><img src="/common/img/language_sim-ch.gif" alt="view &quot;Privacy Policy&quot; in Simplified Chinese"></a></div>
 
 
 
