--- a/k/kf/kfc/kfcu.org.html
+++ b/k/kf/kfc/kfcu.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kfcu.org privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605071110id_/http%3A//kfcu.org/information.news/history/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kfcu.org privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206162239id_/http%3A//www.kfcu.org/information.news/history/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>KFCU - About KFCU - Privacy Policy</title>
@@ -128,7 +128,7 @@ var ranimage = image[core];
 
 document.write('<img src=\"'+ranimage+'\" border="0" height="291" width="185">');
 //-->
-</script><img src="splash2.jpg" border="0" height="291" width="185"></td>
+</script><img src="splash1.jpg" border="0" height="291" width="185"></td>
                 <td valign="top" width="275">
                   <p><img src="header-privacy.gif" width="280" height="25"></p>
                   <table cellpadding="0" cellspacing="0" border="0">
