--- a/t/tu/tum/tumblebooklibrary.com.html
+++ b/t/tu/tum/tumblebooklibrary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tumblebooklibrary.com privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608092207id_/http%3A//www.tumblebooks.com/library/asp/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tumblebooklibrary.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206175424id_/http%3A//www.tumblebooks.com/library/asp/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>TumbleBooks - eBooks for eKids!</title>
@@ -70,9 +70,43 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 				<tbody><tr>
 					<td align="center"><img src="../../images/tagline_stacked2.gif" width="134" height="99" border="0"></td> 
                     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td><img src="../../images/header_logo2.gif" width="368" height="100" border="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<img src="../../images/spacer.gif" width="134" height="99" border="0">
-					 
+                    <td>
+						<table cellpadding="0" cellspacing="0">
+						<tbody><tr>
+						<td><img src="../../images/header_logo2.gif" width="368" height="100" border="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td>
+						<img src="../../images/spacer.gif" width="134" height="99" border="0">
+						</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><script language="JavaScript" type="text/JavaScript">
+function changePage(newLoc)
+ {
+   nextPage = newLoc.options[newLoc.selectedIndex].value
+		
+   if (nextPage != "")
+   {
+      document.location.href = nextPage
+   }
+ }
+</script>
+<form>
+<table cellpadding="2" cellspacing="0" border="0">
+<tbody><tr>
+<td nowrap="">
+<b class="langSelect">CHOOSE A LANGUAGE:</b>
+<select name="selectedPage" onchange="changePage(this.form.selectedPage)">
+<option value="/library/asp/home_tumblebooks.asp" selected="">English</option>
+<option value="/library/asp/spanish/home_tumblebooks.asp">Spanish</option>
+<!--<option value="/library/asp/ChineseTraditional/home_tumblebooks.asp">Chinese</option>-->
+</select>
+</td>
+<td align="right"><input type="button" value="GO" onclick="changePage(this.form.selectedPage)"></td>
+</tr>
+
+</tbody></table></form></td>
+						</tr>
+						</tbody></table>
 					</td>
 				</tr>
 				</tbody></table>
